...
            showPopup = false
            if (isDiscoverable) locationViewModel.tryToStartLocationUpdates()
          })
    }

    Scaffold(
        modifier = Modifier.testTag("aroundYouScreen"),
        topBar = { TopBar(stringResource(R.string.around_you_screen_title)) },
        bottomBar = {
          BottomNavigationMenu(
              onTabSelect = { route ->
                if (route.route != Route.AROUND_YOU) {
                  navigationActions.navigateTo(route)
                }
...
                        testTag = "noBackgroundLocationPermissionPrompt",
                        context,
                        true)
                  } else if (sortedProfiles.isEmpty()) {
                    EmptyProfilePrompt(
                        label = stringResource(R.string.no_one_around),
                        testTag = "emptyProfilePrompt",
                        context)
                  } else {
                    LazyColumn(
                        contentPadding = PaddingValues(vertical = COLUMN_VERTICAL_PADDING),
                        verticalArrangement = Arrangement.spacedBy(COLUMN_VERTICAL_PADDING),
                        modifier =
...
    // Selected option with a dropdown indicator
    Row(
        modifier =
            Modifier.fillMaxWidth()
                .clickable { expanded = !expanded }
                .padding(COLUMN_HORIZONTAL_PADDING)
                .testTag("SortOptionsDropdown_Selected"),
        verticalAlignment = Alignment.CenterVertically) {
          Text(
              color = MaterialTheme.colorScheme.onSecondary,
              text =
                  "Sort by: ${
                    selectedOption.name.replace("_", " ").lowercase()
...
            tags: List<String>?) -> Unit,
    modifier: Modifier = Modifier,
    state: PullToRefreshState = rememberPullToRefreshState(),
    contentAlignment: Alignment = Alignment.TopStart,
    indicator: @Composable BoxScope.() -> Unit = {
      Indicator(
          modifier = Modifier.align(Alignment.TopCenter).testTag("refreshIndicator"),
          isRefreshing = isRefreshing,
          state = state)
    },
    content: @Composable BoxScope.() -> Unit
) {
  val userLocation = locationViewModel.lastKnownLocation.collectAsState()
...
